<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SettingsFragment"
    app:theme="@style/AppTheme">

    <Button
        android:id="@+id/buttonChangeColors"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/change_colors"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonChangeFont"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/change_font"
        android:layout_below="@+id/buttonChangeColors"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonNotifications"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/buttonChangeFont"
        android:text="@string/send_notification"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="16dp" />

</RelativeLayout>